--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -13,3 +13,13 @@
 // To declare rules for a specific mode, create a child rule
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
+.scroll-content {
+  display: flex !important;
+  flex-direction: column !important;
+  // height: 66% !important;
+}
+
+.contentRoom {
+  flex: 1 0 auto !important; /* Prevent Chrome, Opera, and Safari from letting these items shrink to smaller than their content's default minimum size. */
+  padding: 20px !important;
+}
