--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -30,10 +30,10 @@
 
   <link href="build/main.css" rel="stylesheet">
 
-  <link href="assets/game/TemplateData/style.css" rel="stylesheet">
-  <script src="assets/game/TemplateData/UnityProgress.js"></script>
-  <script src="assets/game/Build/UnityLoader.js"></script>
-
+  <link href="/game/TemplateData/style.css" rel="stylesheet">
+  <script src="/game/TemplateData/UnityProgress.js"></script>
+  <script src="/game/Build/UnityLoader.js"></script>
+  <script src="/js/dependencies/sails.io.js"></script>
 </head>
 
 <body>
