--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -3,7 +3,13 @@
 
 <head>
   <script data-ionic="inject">
-    (function (w) { var i = w.Ionic = w.Ionic || {}; i.version = '3.9.2'; i.angular = '5.0.3'; i.staticDir = 'build/'; })(window);
+    (function (w) {
+      var i = w.Ionic = w.Ionic || {};
+      i.version = '3.9.2';
+      i.angular = '5.0.3';
+      i.staticDir = 'build/';
+    })(window);
+
   </script>
   <meta charset="UTF-8">
   <title>Game</title>
@@ -89,8 +95,8 @@
 
     <div id="canvasfull">
     </div>
-    <link href="/game/TemplateData/style.css" rel="stylesheet">
-    <script src="/game/TemplateData/UnityProgress.js"></script>
+    <!-- <link href="/game/TemplateData/style.css" rel="stylesheet"> -->
+    <!-- <script src="/game/TemplateData/UnityProgress.js"></script> -->
     <script src="/game/Build/UnityLoader.js"></script>
 </body>
 
