--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,10 @@
 page-home {
-
+  .registration {
+    margin-top: 10%;
+    margin-left: 20%;
+    margin-right: 20%;
+  }
+  .metamask {
+    margin: auto;
+  }
 }
