--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -20,6 +20,14 @@
   // height: 66% !important;
 }
 
+.abs-center {
+  position: absolute !important;
+  margin: auto !important;
+  top: 0 !important;
+  right: 0 !important;
+  bottom: 0 !important;
+  left: 0 !important;
+}
 .contentRoom {
   flex: 1 0 auto !important; /* Prevent Chrome, Opera, and Safari from letting these items shrink to smaller than their content's default minimum size. */
   padding: 20px !important;
@@ -39,6 +47,19 @@ html {
   --secondary-color: yellow;
 }
 
+button {
+  background-color: var(--accent) !important;
+  border-width: 2px;
+  border-style: solid;
+  border-color: rgba(66, 66, 66, 0.35);
+}
+
 .stop-color1 {
   stop-color: purple !important;
+}
+
+.ellip {
+  overflow: hidden !important;
+  white-space: nowrap !important;
+  text-overflow: ellipsis !important;
 }
