--- a/src/components/footer/footer.html
+++ b/src/components/footer/footer.html
@@ -1,3 +1,3 @@
 <ion-toolbar no-padding>
-  <ion-title>Copyright Eth.bid - Domain name for sale. Contact hajaekyung@protonmail.com</ion-title>
+  <ion-title>Copyright Eth.bid - contact@scottb.app</ion-title>
 </ion-toolbar>
