--- a/src/components/ship-card/ship-card.scss
+++ b/src/components/ship-card/ship-card.scss
@@ -1,9 +1,14 @@
 ship-card {
+  pointer-events: auto !important;
   ion-card-title {
     text-overflow: ellipsis !important;
   }
+  ion-card {
+    height: 94% !important;
+  }
   .shipSVG {
     margin: 4%;
+    overflow: visible !important;
   }
   .shipWrap {
   }
@@ -13,6 +18,18 @@ ship-card {
 
   --primary-color: orange;
   --secondary-color: purple;
+  a {
+    color: inherit;
+    text-decoration: none;
+  }
+
+  a:hover {
+    opacity: 1;
+  }
+
+  button {
+    background-color: transparent !important;
+  }
 
   // svg {
   //   --secondary-color: green;
@@ -42,4 +59,17 @@ ship-card {
   //   --secondary-color: #ffdf34;
   //   --tertiary-color: #333;
   // }
+}
+
+ship-card,
+ship-select {
+  .weaponWrap {
+    bottom: 0;
+    position: absolute;
+  }
+  .weaponIcon {
+    width: 18%;
+    float: right;
+    padding-left: 2px;
+  }
 }
