--- a/src/pages/ship/ship.scss
+++ b/src/pages/ship/ship.scss
@@ -1,3 +1,10 @@
 page-ship {
-
+  .actions {
+    button {
+      background-color: var(--accent) !important;
+      border-width: 2px;
+      border-style: solid;
+      border-color: rgba(66, 66, 66, 0.35);
+    }
+  }
 }
