Improve mobile and auctions page
Former-commit-id: 390df4be6c35fad3ddb7bd9219470bded7b0639b

--- a/src/pages/auctions/auctions.scss
+++ b/src/pages/auctions/auctions.scss
@@ -1,2 +1,30 @@
 page-auctions {
+  .pagination {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 16px;
+    ion-icon {
+      padding: 10px;
+      transition: 0.5;
+    }
+    span {
+      text-align: center;
+      min-width: 28px;
+    }
+  }
+  ship-card {
+    opacity: 0;
+    animation: fadeIn 0.2s ease-in forwards;
+  }
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0.3;
+  }
+
+  100% {
+    opacity: 1;
+  }
 }
