--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -1,6 +1,9 @@
 footer-component {
   flex-shrink: 0 !important; /* Prevent Chrome, Opera, and Safari from letting these items shrink to smaller than their content's default minimum size. */
 
+  .toolbar-title {
+    font-size: 120%;
+  }
   .toolbar-content {
     // background-color: grey;
     padding: 0px;
