--- a/src/components/header/header.html
+++ b/src/components/header/header.html
@@ -1,27 +1,42 @@
-<!-- Generated template for the HeaderComponent component -->
-
 <ion-header #header>
   <ion-navbar>
-
     <ion-grid>
       <ion-row>
-        <ion-col col-3></ion-col>
-        <ion-col col-6 text-center>
-          <!-- <span (click)="page('AuctionsPage')" tappable [ngClass]="{'selected': page == 'Auctions'}">Auctions</span>
-          <span (click)="page('AuctionsPage')" tappable [ngClass]="{'selected': page == 'My Ships'}">My Ships</span>
-          <span (click)="page('AuctionsPage')" tappable [ngClass]="{'selected': page == 'Battle'}">Battle</span> -->
-          <a [href]="'/'+p.href" class="headerLinks" *ngFor="let p of pages" (click)="openPage($event, p)" tappable [ngClass]="{'activePage': p.href == appState.activePage}">{{p.title}}</a>
+        <ion-col col-1 col-md-3></ion-col>
+        <ion-col col-9 col-md-6 text-center>
+          <!--
+            <span (click)="page('AuctionsPage')" tappable [ngClass]="{'selected': page == 'Auctions'}">Auctions</span>
+            <span (click)="page('AuctionsPage')" tappable [ngClass]="{'selected': page == 'My Ships'}">My Ships</span>
+            <span (click)="page('AuctionsPage')" tappable [ngClass]="{'selected': page == 'Battle'}">Battle</span>
+          -->
+          <a
+            [href]="'/' + p.href"
+            class="headerLinks"
+            *ngFor="let p of pages"
+            (click)="openPage($event, p)"
+            tappable
+            [ngClass]="{ activePage: p.href == appState.activePage }"
+            >{{ p.title }}</a
+          >
         </ion-col>
 
-        <ion-col col-3>
-          <span class="ellip">{{appState.accountStatus}}</span>
+        <ion-col col-12 col-md-3 text-center>
+          <span class="ellip">{{ appState.accountStatus }}</span>
         </ion-col>
       </ion-row>
     </ion-grid>
-    <!-- <ion-tabs color="dark">
-      <ion-tab tabTitle="Auctions" [root]="rootPage"></ion-tab>
-      <ion-tab tabTitle="My Ships" [root]="rootPage"></ion-tab>
-      <ion-tab tabTitle="Nattle" [root]="rootPage"></ion-tab>
-    </ion-tabs> -->
-  </ion-navbar>
+    <!--
+      <ion-tabs color="dark">
+        <ion-tab tabTitle="Auctions" [root]="rootPage"></ion-tab>
+        <ion-tab tabTitle="My Ships" [root]="rootPage"></ion-tab>
+        <ion-tab tabTitle="Nattle" [root]="rootPage"></ion-tab>
+      </ion-tabs>
+    --> </ion-navbar
+  ><a href="https://github.com/ScottMBerger/Blockchain-Ionic-Unity-Game">
+    <img
+      style="position: absolute; top: 0; left: 0; border: 0;"
+      src="https://s3.amazonaws.com/github/ribbons/forkme_left_gray_6d6d6d.png"
+      alt="Fork me on GitHub"
+    />
+  </a>
 </ion-header>
