update with tutorial page
Former-commit-id: 8ab8a78598ca8062f94b6a7ae70c15b1f474ab9f

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -7,4 +7,11 @@ page-home {
   .metamask {
     margin: auto;
   }
+
+  .card-demo {
+    max-width: 800px;
+  }
+  ion-card {
+    box-shadow: none !important;
+  }
 }
