--- a/src/components/ship-card/ship-card.scss
+++ b/src/components/ship-card/ship-card.scss
@@ -71,5 +71,10 @@ ship-select {
     width: 18%;
     float: right;
     padding-left: 2px;
+    background-color: rgba(128,128,128, 0.63);
+    border-radius: 8px;
+    border-width: 2px;
+    border-color: rgba(51,54,108, 0.4);
+    border-style: solid;
   }
 }
