Styling and tutorial homepage
Former-commit-id: f812f9b6075e3e34ba2649bd498c61aed559378e

--- a/src/components/footer/footer.html
+++ b/src/components/footer/footer.html
@@ -1,3 +1,3 @@
 <ion-toolbar no-padding>
-  <ion-title>Copyright Eth.bid - contact@scottb.app</ion-title>
+  <ion-title>© Eth.bid 2019. All Rights Reserved. <a href="mailto:contact@scottb.app" target="_top">contact@scottb.app</a></ion-title>
 </ion-toolbar>
