--- a/src/components/header/header.html
+++ b/src/components/header/header.html
@@ -2,18 +2,19 @@
   <ion-navbar>
     <ion-grid>
       <ion-row>
-        <ion-col col-1 col-md-3></ion-col>
+        <ion-col col-0 col-md-3><a href="/" (click)="goHome($event)" class="logo">Eth.bid</a></ion-col>
         <ion-col col-9 col-md-6 text-center>
           <!--
             <span (click)="page('AuctionsPage')" tappable [ngClass]="{'selected': page == 'Auctions'}">Auctions</span>
             <span (click)="page('AuctionsPage')" tappable [ngClass]="{'selected': page == 'My Ships'}">My Ships</span>
             <span (click)="page('AuctionsPage')" tappable [ngClass]="{'selected': page == 'Battle'}">Battle</span>
           -->
-          <a [href]="'/' + p.href" class="headerLinks" *ngFor="let p of pages" (click)="openPage($event, p)" tappable [ngClass]="{ activePage: p.href == appState.activePage }">{{ p.title }}</a>
+          <a [href]="'/' + p.href" class="headerLinks" *ngFor="let p of pages" (click)="openPage($event, p)" tappable
+            [ngClass]="{ activePage: p.href == appState.activePage }">{{ p.title }}</a>
         </ion-col>
 
         <ion-col col-12 col-md-3 text-center>
-          <span class="ellip">{{ appState.accountStatus }}</span>
+          <p class="ellip">{{ appState.accountStatus }}</p>
         </ion-col>
       </ion-row>
     </ion-grid>
@@ -23,5 +24,6 @@
         <ion-tab tabTitle="My Ships" [root]="rootPage"></ion-tab>
         <ion-tab tabTitle="Nattle" [root]="rootPage"></ion-tab>
       </ion-tabs>
-    --></ion-navbar>
+    -->
+  </ion-navbar>
 </ion-header>
