--- a/src/pages/auctions/auctions.scss
+++ b/src/pages/auctions/auctions.scss
@@ -17,6 +17,16 @@ page-auctions {
     opacity: 0;
     animation: fadeIn 0.2s ease-in forwards;
   }
+  .ships-row {
+    max-width: 1600px;
+    margin: auto;
+  }
+  
+  @media (max-width: 767px) {
+    .pagination {
+      margin-top: 24px;
+    }
+  }
 }
 
 @keyframes fadeIn {
