--- a/src/pages/my-ships/my-ships.scss
+++ b/src/pages/my-ships/my-ships.scss
@@ -1,2 +1,8 @@
 page-my-ships {
+    .column-center {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+    }
 }
